<resources>
    <string name="app_name">Etbo5ly</string>
    <string name="map_api_key">AIzaSyAnjvMAJEmiAv3yeCDUXWv-PboXiT_uaoQ</string>
    <string name="search_key">AIzaSyAnjvMAJEmiAv3yeCDUXWv-PboXiT_uaoQ</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>
    <string name="send">Send</string>
    <string name="home">Home</string>
    <string name="nearby">Nearby</string>
    <string name="reservation">Reservations</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="create_your_account_now">create your account now</string>
    <string name="continue1">Continue</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="phone">Phone number</string>
    <string name="login">Login</string>
    <string name="terms_and_conditions">Terms and conditions</string>
    <string name="about_us">About us</string>
    <string name="privacy_policy">Privacy policy</string>
    <string name="contact_us">Contact us</string>
    <string name="wait">Wait</string>
    <string name="current">Current</string>
    <string name="prev">Previous</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="next">Next</string>
    <string name="notifications">Notifications</string>
    <string name="sign_up">Sign up</string>
    <string name="update">Update</string>
    <string name="please_enter_code_sent_to">please enter code sent to</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="confirmation_code">Confirmation code</string>
    <string name="field_required">field required</string>
    <string name="inv_email">invalid email</string>
    <string name="search">Search...</string>
    <string name="rate_app">Rate App</string>
    <string name="settings">Settings</string>
    <string name="change_language">Change language</string>
    <string name="no_reservation_to_show">No reservation to show</string>
    <string name="sorry">Sorry !</string>
    <string name="no_notifications_to_show">No notifications to show</string>
    <string name="map_key" />
    <string name="filter">Filter</string>
    <string name="rating">Rating</string>
    <string name="price">Price</string>
    <string name="show_results">Show results</string>
    <string name="more">More</string>
    <string name="details">Details</string>
    <string name="book_now">Book now</string>
    <string name="please_enter_the_verification_code_sent_to">Please enter the verification code sent to</string>
    <string name="user_blocked">User Blocked</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="user_found">User Found</string>
    <string name="suc">Success</string>
    <string name="all">All</string>
    <string name="no_services_to_show">No services to show</string>
    <string name="cahnge">Change</string>
    <string name="show">Show</string>
    <string name="no_search_result">No search result</string>
    <string name="offers">Offers</string>
    <string name="change">Change</string>
    <string name="cnt_book">You cannot book now</string>
    <string name="choose_language">Change language</string>
    <string name="cook_me">Cook me</string>
    <string name="choose_country">Choose country</string>
    <string name="plz_ch_country">Please,your location.</string>
    <string name="skip">Skip</string>
    <string name="select_order">Select your order</string>
    <string name="sel_order_u_want">Select your order if you want to book a buffet or order\n From an independent chef or from a food cart</string>
    <string name="ch_food">Choose your food from the menu online</string>
    <string name="ch_appro">Choose the appropriate cuisine for your occasion, if it is a restaurant\n Or independent chefs or mobile carts</string>
    <string name="sel_address_receive">Select your address to receive your order</string>
    <string name="ch_app_cuisine">Choose the appropriate cuisine for your occasion, if it is a restaurant\n Or independent chefs or mobile carts</string>
    <string name="start">Start</string>
    <string name="ch_city">Choose city</string>
    <string name="do_read_our_terms_of_use_and_privacy_policy"><![CDATA[Do read our <font color ="#4D94BE"><a href="http://etbo5ly.coopq8.com/terms#1">Terms of Use</a></font> and <font color ="#4D94BE"><a href="http://etbo5ly.coopq8.com/terms#2">Privacy Policy</a></font>]]></string>
    <string name="yes_i_have_read_it_and_agree_to_it">Yes, I have read it and agree to it</string>
    <string name="cnt_login">You cannot log in without agreeing to the Terms of Use</string>
    <string name="ph_em_found">phone number or email already exists</string>
    <string name="explore_the_various_options">Explore the various options</string>
    <string name="banquet_and_events_services">Banquet and events services</string>
    <string name="demand_from_independent_chefs">Demand from independent chefs</string>
    <string name="order_food_trucks_to_reach_you">Order food trucks to reach you</string>
    <string name="cart">Cart</string>
    <string name="orders">Orders</string>
    <string name="select_location_on_map">Select location on map</string>
    <string name="categories">Categories</string>
    <string name="the_most_popular_in_your_area">The most popular in your area</string>
    <string name="kitchens_provide_free_delivery">Provides free delivery</string>
    <string name="show_all_kitchen">Show all</string>
    <string name="featured_kitchens">Featured</string>
    <string name="booking">Booking</string>
    <string name="day">Day</string>
    <string name="days">Days</string>
    <string name="in_advance">in advance</string>
    <string name="delivery_way">Delivery way</string>
    <string name="delivery">Delivery</string>
    <string name="receive_from_branch">Receive from branch</string>
    <string name="delivery_time">Delivery time</string>
    <string name="from_8_am_to_4_pm">From 8 am to 4 pm</string>
    <string name="from_4_pm_to_10_pm">From 4 pm to 10 pm</string>
    <string name="filter_by">Filter by</string>
    <string name="from_10_pm_to_8_am">From 10 pm to 8 am</string>
    <string name="apply">Apply</string>
    <string name="sort_by">Sort by</string>
    <string name="most_rated">Most rated</string>
    <string name="nearest">Nearest</string>
    <string name="prepare_time">Prepare time</string>
    <string name="provider">Provider</string>
    <string name="buffet_booking_service">Buffet booking service</string>
    <string name="we_offer_buffets">We offer buffets for all occasions\n private and public</string>
    <string name="banquet_booking_service">Banquet booking service</string>
    <string name="we_offer_you_banquet">We offer you banquets for all occasions\n private and public</string>
    <string name="no_gallery_to_show">No gallery to show</string>
    <string name="no_comments">No comments</string>
    <string name="services">Services</string>
    <string name="gallery2">Gallery</string>
    <string name="rates">Rates</string>
    <string name="men">Men</string>
    <string name="women">women</string>
    <string name="men_women">Men and women</string>
    <string name="undefined">undefined</string>
    <string name="select_your_order">Select your order</string>
    <string name="buffets_menu">Buffets menu</string>
    <string name="dishes_menu">Dishes menu</string>
    <string name="banquet_menu">Banquet menu</string>
    <string name="sar">SAR</string>
    <string name="person">Person</string>
    <string name="people">People</string>
    <string name="order">Order</string>
    <string name="buffets">Buffets</string>
    <string name="no_dishes_to_show">No dishes to show</string>
    <string name="for1">For</string>
    <string name="dish">dish</string>
    <string name="dishes">Dishes</string>
    <string name="feasts">Feasts</string>
    <string name="people2">People</string>
    <string name="menu">Menu</string>
    <string name="amount">Amount</string>
    <string name="feasts_menu">Feasts menu</string>
    <string name="favorite">Favorite</string>
    <string name="support">Support</string>
    <string name="total">Total</string>
    <string name="checkout">checkout</string>
    <string name="order_only_place">Sorry!,please order from only one place</string>
    <string name="cart_empty">Shopping cart is empty</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="clear_cart">Clear cart</string>
    <string name="unknown">UnKnown</string>
    <string name="already_cart">Already in shopping cart</string>
    <string name="no_offers">No offers to show</string>
    <string name="drop_off_location">Drop off location</string>
    <string name="drop_off_area">Drop off area</string>
    <string name="address_in_details">Address/Floor No/Apartment No</string>
    <string name="booking_date">Booking date</string>
    <string name="notes">Notes</string>
    <string name="enter_coupon_code">Enter coupon code</string>
    <string name="check">Check</string>
    <string name="items_total">Sub total :</string>
    <string name="tax">TAX :</string>
    <string name="coupon_value">Coupon value :</string>
    <string name="payment">Payment</string>
    <string name="cash">Cash</string>
    <string name="online">Online</string>
    <string name="free">Free</string>
    <string name="not_available">Not available</string>
    <string name="customer_service_cost">Customer service cost</string>
    <string name="discount">Discount:</string>
    <string name="covered_area">Covered areas</string>
    <string name="dismiss">Dismiss</string>
    <string name="select">Select</string>
    <string name="order_sent_successfully">Order sent successfully</string>
    <string name="order_num">Order Num :</string>
    <string name="copoun_not_found">Coupon is not found</string>
    <string name="coupon_used">Coupon is used</string>
    <string name="coupon_not_activr">Coupon is not active</string>
    <string name="cnt_book_time">Cannot booking at this time</string>
    <string name="follow_your_order">Follow your order</string>
    <string name="status_new">New</string>
    <string name="status_accepted">Accepted</string>
    <string name="status_pending">Pending</string>
    <string name="delivering">Delivering</string>
    <string name="status_refused">Refused</string>
    <string name="delivered">Delivered</string>
    <string name="done">Done</string>
    <string name="call">Call</string>
    <string name="follow">Follow</string>
    <string name="reorder">Re-Order</string>
    <string name="no_orders">No orders to show</string>
    <string name="rate">Rate</string>
    <string name="completed">Completed</string>
    <string name="status">Status :</string>
    <string name="received_your_order">Received your order</string>
    <string name="no_fav">No favorite items</string>
    <string name="order_approved">Your order has been approved from</string>
    <string name="order_refused">Your order has been refused</string>
    <string name="your_order_from">Your order from</string>
    <string name="delivered2">delivered</string>
    <string name="type_comment_here">Type comment here...</string>
    <string name="busy">Busy</string>
    <string name="offline">Offline</string>
    <string name="sorry_cnt_make_order">Sorry! you cannot make order now ,this kitchen maybe closed or busy</string>
    <string name="change_service">Change service</string>
    <string name="address">Address</string>
    <string name="area_not_covered">This kitchen don\'t cover this area</string>
</resources>