<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".uis.catering_uis.activity_filter_setting.FilterSettingActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/gray15"
                android:textSize="15sp"
                android:text="@string/filter"
                />
            <androidx.legacy.widget.Space
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />

            <ImageView
                android:id="@+id/imageClose"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/ic_close2"
                />
        </LinearLayout>

       <androidx.core.widget.NestedScrollView
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:fillViewport="true"
           >
           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:orientation="vertical"
               android:padding="16dp"
               >
               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textColor="@color/black"
                   android:textSize="15sp"
                   android:text="@string/categories"
                   android:textStyle="bold"
                   />
               <FrameLayout
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="8dp"
                   >
                   <androidx.recyclerview.widget.RecyclerView
                       android:id="@+id/recView"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       />
                   <ProgressBar
                       android:id="@+id/progBar"
                       android:layout_width="wrap_content"
                       android:layout_height="wrap_content"
                       android:layout_gravity="center"
                       />
               </FrameLayout>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textColor="@color/black"
                   android:textSize="15sp"
                   android:text="@string/delivery_way"
                   android:textStyle="bold"
                   android:layout_marginTop="8dp"
                   />
               <RadioGroup
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="5dp"
                   >
                   <RadioButton
                       android:id="@+id/rbDelivery"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       app:buttonTint="@color/colorPrimary"
                       android:paddingStart="8dp"
                       android:paddingEnd="8dp"
                       android:textColor="@color/gray15"
                       android:textSize="15sp"
                       android:text="@string/delivery"
                       android:layout_marginStart="8dp"
                       android:layout_marginEnd="8dp"
                       />
                   <RadioButton
                       android:id="@+id/rbReceive"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       app:buttonTint="@color/colorPrimary"
                       android:paddingStart="8dp"
                       android:paddingEnd="8dp"
                       android:textColor="@color/gray15"
                       android:textSize="15sp"
                       android:text="@string/receive_from_branch"
                       android:layout_marginStart="8dp"
                       android:layout_marginEnd="8dp"
                       android:layout_marginTop="8dp"
                       />
               </RadioGroup>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textColor="@color/black"
                   android:textSize="15sp"
                   android:text="@string/delivery_time"
                   android:textStyle="bold"
                   android:layout_marginTop="8dp"
                   />

               <RadioGroup
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="5dp"
                   >
                   <RadioButton
                       android:id="@+id/rb1"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       app:buttonTint="@color/colorPrimary"
                       android:paddingStart="8dp"
                       android:paddingEnd="8dp"
                       android:textColor="@color/gray15"
                       android:textSize="15sp"
                       android:text="@string/from_8_am_to_4_pm"
                       android:layout_marginStart="8dp"
                       android:layout_marginEnd="8dp"
                       />
                   <RadioButton
                       android:id="@+id/rb2"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       app:buttonTint="@color/colorPrimary"
                       android:paddingStart="8dp"
                       android:paddingEnd="8dp"
                       android:textColor="@color/gray15"
                       android:textSize="15sp"
                       android:text="@string/from_4_pm_to_10_pm"
                       android:layout_marginStart="8dp"
                       android:layout_marginEnd="8dp"
                       android:layout_marginTop="8dp"
                       />

                   <RadioButton
                       android:id="@+id/rb3"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       app:buttonTint="@color/colorPrimary"
                       android:paddingStart="8dp"
                       android:paddingEnd="8dp"
                       android:textColor="@color/gray15"
                       android:textSize="15sp"
                       android:text="@string/from_10_pm_to_8_am"
                       android:layout_marginStart="8dp"
                       android:layout_marginEnd="8dp"
                       android:layout_marginTop="8dp"
                       />
               </RadioGroup>

               <TextView
                   android:layout_width="wrap_content"
                   android:layout_height="wrap_content"
                   android:textColor="@color/black"
                   android:textSize="15sp"
                   android:text="@string/filter_by"
                   android:textStyle="bold"
                   android:layout_marginTop="8dp"
                   />

               <RadioGroup
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_marginTop="5dp"
                   >
                   <RadioButton
                       android:id="@+id/rbAll"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       app:buttonTint="@color/colorPrimary"
                       android:paddingStart="8dp"
                       android:paddingEnd="8dp"
                       android:textColor="@color/gray15"
                       android:textSize="15sp"
                       android:text="@string/all"
                       android:layout_marginStart="8dp"
                       android:layout_marginEnd="8dp"
                       />
                   <RadioButton
                       android:id="@+id/rbPopular"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       app:buttonTint="@color/colorPrimary"
                       android:paddingStart="8dp"
                       android:paddingEnd="8dp"
                       android:textColor="@color/gray15"
                       android:textSize="15sp"
                       android:text="@string/the_most_popular_in_your_area"
                       android:layout_marginStart="8dp"
                       android:layout_marginEnd="8dp"
                       android:layout_marginTop="8dp"
                       />

                   <RadioButton
                       android:id="@+id/rbFeatured"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       app:buttonTint="@color/colorPrimary"
                       android:paddingStart="8dp"
                       android:paddingEnd="8dp"
                       android:textColor="@color/gray15"
                       android:textSize="15sp"
                       android:text="@string/featured_kitchens"
                       android:layout_marginStart="8dp"
                       android:layout_marginEnd="8dp"
                       android:layout_marginTop="8dp"
                       />
                   <RadioButton
                       android:id="@+id/rbFreeDelivery"
                       android:layout_width="match_parent"
                       android:layout_height="wrap_content"
                       app:buttonTint="@color/colorPrimary"
                       android:paddingStart="8dp"
                       android:paddingEnd="8dp"
                       android:textColor="@color/gray15"
                       android:textSize="15sp"
                       android:text="@string/kitchens_provide_free_delivery"
                       android:layout_marginStart="8dp"
                       android:layout_marginEnd="8dp"
                       android:layout_marginTop="8dp"
                       />
               </RadioGroup>

               <Button
                   android:id="@+id/btnApply"
                   android:layout_width="match_parent"
                   android:layout_height="48dp"
                   android:textColor="@color/white"
                   android:background="@drawable/small_rounded_primary"
                   android:textSize="15sp"
                   android:layout_marginTop="24dp"
                   android:layout_marginBottom="24dp"
                   android:layout_marginStart="5dp"
                   android:layout_marginEnd="5dp"
                   android:text="@string/apply"

                   />

           </LinearLayout>
       </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>
