<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="total"
            type="Double" />

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <include
                android:id="@+id/recViewLayout"
                layout="@layout/recview_layout" />

        </FrameLayout>

        <FrameLayout
            android:id="@+id/flClear"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/small_stroke_primary"
            android:visibility='@{total>0?View.VISIBLE:View.GONE,default=gone}'

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/clear_cart"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp" />
        </FrameLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:translationY="20dp"
            android:visibility='@{total>0?View.VISIBLE:View.GONE,default=gone}'
            app:cardBackgroundColor="@color/gray22"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/total"
                        android:textColor="@color/black"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text='@{total+@string/sar}'
                        android:textColor="@color/black"
                        android:textSize="15sp" />


                </LinearLayout>

                <Button
                    android:id="@+id/btnCheckout"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/small_rounded_primary"
                    android:text="@string/checkout"
                    android:textColor="@color/white"
                    android:textSize="15sp" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </LinearLayout>


</layout>
